@@ -2,27 +2,42 @@ package com.java2nb.common.utils;
 
 import lombok.experimental.UtilityClass;
 
-import java.util.Arrays;
-import java.util.HashSet;
 import java.util.Set;
 
 /**
- * @author xiongxiaoyang
- * @date 2025/7/17
+ * 排序字段和排序顺序的白名单工具类。
  */
 @UtilityClass
 public class SortWhitelistUtil {
 
-    private final Set<String> allowedColumns = new HashSet<>(
-        Arrays.asList("id", "name", "create_time", "update_time", "order_num", "last_index_update_time", "word_count",
-            "visit_count"));
-    private final Set<String> allowedOrders = new HashSet<>(Arrays.asList("asc", "desc"));
+    // 白名单字段
+    private static final Set<String> ALLOWED_COLUMNS = Set.of("id", "name", "order_num");
 
-    public String sanitizeColumn(String input) {
-        return allowedColumns.contains(input.toLowerCase()) ? input.toLowerCase() : "id";
+    // 白名单排序方式
+    private static final Set<String> ALLOWED_ORDERS = Set.of("asc", "desc");
+
+    /**
+     * 对排序字段进行白名单过滤和标准化。
+     *
+     * @param column 原始字段名
+     * @return 安全的字段名，若非法则返回 null
+     */
+    public static String sanitizeColumn(String column) {
+        if (column == null) return null;
+        String lower = column.trim().toLowerCase();
+        return ALLOWED_COLUMNS.contains(lower) ? lower : null;
     }
 
-    public String sanitizeOrder(String input) {
-        return allowedOrders.contains(input.toLowerCase()) ? input.toLowerCase() : "asc";
+    /**
+     * 对排序方式进行白名单过滤和标准化。
+     *
+     * @param order 原始排序方式
+     * @return 安全的排序方式（"asc" 或 "desc"），若非法则返回 null
+     */
+    public static String sanitizeOrder(String order) {
+        if (order == null) return null;
+        String lower = order.trim().toLowerCase();
+        return ALLOWED_ORDERS.contains(lower) ? lower : null;
     }
+
 }
